# AbstractProgrammingProject

./: CMakeLists.txt  CMakeListsLocal.txt  CMakeListsforDocker.txt  DockerfileBuildEnv  Makefile  README.md  main.cpp
concepts/: MathConcepts.h
exceptions/: ArgumentsException.h  CorectionExceptions.h  NotAllowedExceptions.h  NumericConvertionException.h  OperatorException.h
tests/: compute_tests.h  function_tests.h  main_tests.cpp  vector_tests.h
utils/: ComputableTree.h  ComputeNode.h  Dual.h  ExpTree.h  ExpVectorTree.h  ExpressionChecker.h  ExpressionTreeOperators.h  ExpressionVector.h  FunctionalNode.h  FunctionalTree.h  NodeCreators.h  OperatorDeductor.h  TreeNode.h  VectorNode.h  converters.cpp  expression_checkers.cpp
utils/Nodes/: ComputeNode.h  FunctionalNode.h  NodeCreators.h  TreeNode.h  VectorNode.h
utils/Trees/: ComputableTree.h  ExpTree.h  ExpVectorTree.h  FunctionalTree.h
